--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://127.0.0.1:27017/mernapp
+MONGO_URI=mongodb+srv://rafiquetechinvento:Rafique4838@cluster0.ogmgxyw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
